# ai_arr_control

./: .dockerignore  .env.example  .gitignore  API.md  BUILD.md  CHANGELOG.md  CHANGES.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_TRANSFORMATION_REPORT.md  FINAL_VERIFICATION.md  HELPERS.md  IMPROVEMENTS.md  INSTALL.md  PRODUCTION.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  PROJECT_TRANSFORMATION.md  QUICKSTART.md  README.md  TEST_RESULTS.md  TRANSFORMATION_COMPLETE.txt  TRANSFORMATION_SUMMARY.md  TROUBLESHOOTING.md  docker-compose.yml  main.py  pyproject.toml  setup.txt
.github/workflows/: ci.yml
agents/: __init__.py  base.py  indexer_autoheal_agent.py  indexer_control_agent.py  indexer_discovery_agent.py  indexer_health_agent.py  monitor.py  orchestrator.py
api/: __init__.py  schemas.py
config/: settings.py
core/: cache.py  http.py  logging.py  monitoring.py  shutdown.py  utils.py  validator.py
db/: migrations.py  models.py  session.py
examples/: example_data.py
scripts/: manage.bat  manage.ps1  manage.sh
services/: __init__.py  lidarr.py  prowlarr.py  radarr.py  sonarr.py
tests/: __init__.py  conftest.py  test_agents.py  test_agents_framework.py  test_cache.py  test_http.py  test_integration.py  test_main.py  test_services.py
tools/: __init__.py  check_runtime.py  cli.py
