[project]
name = "ai-arr-control"
version = "0.2.0"
description = "Autonomous AI agent platform for Radarr, Sonarr, Prowlarr indexer control"
authors = [{ name = "Neo" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "loguru>=0.7",
    "python-dotenv>=1.0"
]


[tool.uvicorn]
factory = false


[tool.black]
line-length = 100


[tool.ruff]
line-length = 100
select = ["E", "F", "I"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"